<resources>
    <string name="app_name">FITLOVER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    \\SANTIAGO
    <string name="email">Email</string>
    <string name="userName">Nombre de usuario</string>
    <string name="password">Password</string>
  \\Joaquin
    <string name="menu_timer">Timer</string>
    <string name="menu_calendario">Calendario</string>
</resources>